--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "monk": "^7.3.2",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   }
 }
