--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "kafka-node": "^5.0.0",
+    "kafkajs": "^1.14.0",
     "mongodb": "^3.6.2",
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "ws": "^7.4.0"
   }
 }
