--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "kafka-node": "^5.0.0",
-    "kafkajs": "^1.13.0"
+    "kafkajs": "^1.13.0",
+    "mqtt": "^4.2.5"
   }
 }
