--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "image-to-base64": "^2.1.1",
     "kafka-node": "^5.0.0",
     "kafkajs": "^1.14.0",
     "mongodb": "^3.6.2",
