--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "path": "^0.12.7",
+    "primus": "^8.0.0",
+    "socket.io": "^3.0.1",
+    "substream": "^0.2.0",
     "ws": "^7.4.0"
   }
 }
