--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "image-to-base64": "^2.1.1",
+    "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "kafkajs": "^1.14.0",
+    "md5": "^2.3.0",
     "mongodb": "^3.6.2",
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
