--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs": "0.0.1-security",
     "kafka-node": "^5.0.0",
-    "mqtt": "^4.2.1"
+    "mqtt": "^4.2.1",
+    "path": "^0.12.7"
   }
 }
