fixing on bug with file volumesystem in docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_LISTENERS: LISTENER_PRODUCER://kafka-broker:9092, LISTENER_CONTAINER://kafka-broker:29092
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_PRODUCER://x2.hcm-lab.id:9092, LISTENER_CONTAINER://kafka-broker:29092
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_PRODUCER://192.168.1.36:9092, LISTENER_CONTAINER://kafka-broker:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_PRODUCER:PLAINTEXT,LISTENER_CONTAINER:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_CONTAINER
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -74,7 +74,7 @@ services:
      - 3000:3000
     environment: 
      - PORT=3000
-     - CORS=http://x2.hcm-lab.id:3001
+     - CORS=http://192.168.1.36:3001
   
   front-end:
     container_name: front-end-iksans
