--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "image-to-base64": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
     "kafkajs": "^1.14.0",
     "md5": "^2.3.0",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.11.11",
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
