--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "image-to-base64": "^2.1.1",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongodb": "^3.6.2",
