--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.0.0",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "handlebars": "^4.7.6",
     "https": "^1.0.0",
     "image-to-base64": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
@@ -27,6 +28,7 @@
     "monk": "^7.3.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "path": "^0.12.7",
     "primus": "^8.0.0",
     "socket.io": "^3.0.1",
